// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-multisuggestion--always-show-all"
    id=":label4"
  >
    Viser alle options også når valgt
  </label>
  <u-tags
    role="group"
    aria-label="Viser alle options også når valgt"
  >
    <input
      type="text"
      list=":r4:"
      placeholder
      id="components-multisuggestion--always-show-all"
      value="Sogndal"
      aria-label="Viser alle options også når valgt, No selected"
      popovertarget=":r4:"
      aria-autocomplete="list"
      aria-controls=":r4:"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id=":r4:"
      role="listbox"
      tabindex="-1"
      data-multiselectable="true"
      aria-labelledby=":label4"
    >
      <u-option
        data-empty="true"
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        value="Tomt                                                                                                    Sogndal"
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Sogndal                                                                                                    Sogndal"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Oslo                                                                                                    Sogndal"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Stavanger                                                                                                    Sogndal"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Brønnøysund                                                                                                    Sogndal"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Trondheim                                                                                                    Sogndal"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Bergen                                                                                                    Sogndal"
      >
        Bergen
      </u-option>
    </u-datalist>
  </u-tags>
</div>
`;

exports[`Controlled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-multisuggestion--controlled"
    id=":label1"
  >
    Velg reisemål du vil besøke
  </label>
  <u-tags
    role="group"
    aria-label="Velg reisemål du vil besøke"
  >
    <data
      data-removable="true"
      value="Oslo"
      aria-label="OsloKommune, Press to remove, 1 of 1"
      role="button"
      tabindex="-1"
    >
      OsloKommune
    </data>
    <input
      type="text"
      list=":r1:"
      placeholder
      id="components-multisuggestion--controlled"
      value
      aria-label="Velg reisemål du vil besøke, Navigate left to find 1 selected"
      popovertarget=":r1:"
      aria-autocomplete="list"
      aria-controls=":r1:"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id=":r1:"
      role="listbox"
      tabindex="-1"
      data-multiselectable="true"
      aria-labelledby=":label1"
    >
      <u-option
        data-empty="true"
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
      >
        Tomt
      </u-option>
      <u-option
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-tags>
</div>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Oslo
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-multisuggestion--custom-filter-alt-1"
    id=":label2"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <u-tags
    role="group"
    aria-label="Skriv inn et tall mellom 1-6"
  >
    <input
      type="text"
      list=":r2:"
      placeholder
      id="components-multisuggestion--custom-filter-alt-1"
      value
      aria-label="Skriv inn et tall mellom 1-6, No selected"
      popovertarget=":r2:"
      aria-autocomplete="list"
      aria-controls=":r2:"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id=":r2:"
      role="listbox"
      tabindex="-1"
      data-multiselectable="true"
      aria-labelledby=":label2"
    >
      <u-option
        data-empty="true"
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        value="Tomt                                                                                                    "
      >
        Tomt
      </u-option>
      <u-option
        value="sogndal                                                                                                    "
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo                                                                                                    "
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Oslo
      </u-option>
      <u-option
        value="stavanger                                                                                                    "
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="brønnøysund                                                                                                    "
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="trondheim                                                                                                    "
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen                                                                                                    "
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Bergen
      </u-option>
    </u-datalist>
  </u-tags>
</div>
`;

exports[`Custom Filter Alt 2 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-multisuggestion--custom-filter-alt-2"
    id=":label3"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <u-tags
    role="group"
    aria-label="Skriv inn et tall mellom 1-6"
  >
    <input
      type="text"
      list=":r3:"
      placeholder
      id="components-multisuggestion--custom-filter-alt-2"
      value
      aria-label="Skriv inn et tall mellom 1-6, No selected"
      popovertarget=":r3:"
      aria-autocomplete="list"
      aria-controls=":r3:"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id=":r3:"
      role="listbox"
      tabindex="-1"
      data-multiselectable="true"
      aria-labelledby=":label3"
    >
      <u-option
        data-empty="true"
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        value="Tomt                                                                                                    "
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Sogndal                                                                                                    "
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Oslo                                                                                                    "
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Stavanger                                                                                                    "
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Brønnøysund                                                                                                    "
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Trondheim                                                                                                    "
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Bergen                                                                                                    "
      >
        Bergen
      </u-option>
    </u-datalist>
  </u-tags>
</div>
`;

exports[`Fetch External 1`] = `
<div lang="en">
  <label
    data-weight="medium"
    for="components-multisuggestion--fetch-external"
    id=":label5"
  >
    Search for countries (in english)
  </label>
  <u-tags
    role="group"
    aria-label="Search for countries (in english)"
  >
    <input
      type="text"
      list=":r5:"
      placeholder
      id="components-multisuggestion--fetch-external"
      value
      aria-label="Search for countries (in english), No selected"
      popovertarget=":r5:"
      aria-autocomplete="list"
      aria-controls=":r5:"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d country"
      data-sr-plural="%d countries"
      id=":r5:"
      role="listbox"
      tabindex="-1"
      data-multiselectable="true"
      aria-labelledby=":label5"
    >
    </u-datalist>
  </u-tags>
</div>
`;

exports[`Preview 1`] = `
<u-tags
  role="group"
  aria-label
>
  <input
    type="text"
    list=":r0:"
    placeholder
    id="components-multisuggestion--preview"
    value
    aria-label=", No selected"
    popovertarget=":r0:"
    aria-autocomplete="list"
    aria-controls=":r0:"
    aria-expanded="true"
    autocomplete="off"
    role="combobox"
  >
  <button
    data-icon="true"
    data-variant="tertiary"
    type="reset"
    aria-label="Tøm"
  >
  </button>
  <u-datalist
    data-sr-singular="%d forslag"
    data-sr-plural="%d forslag"
    id=":r0:"
    role="listbox"
    tabindex="-1"
    data-multiselectable="true"
    aria-labelledby
  >
    <u-option
      data-empty="true"
      role="none"
      tabindex="-1"
      aria-disabled="false"
      aria-selected="false"
    >
      Tomt
    </u-option>
    <u-option
      value="Sogndal"
      tabindex="-1"
      role="option"
      aria-disabled="false"
      aria-selected="false"
    >
      Sogndal
      <div>
        Kommune
      </div>
    </u-option>
    <u-option
      value="Oslo"
      tabindex="-1"
      role="option"
      aria-disabled="false"
      aria-selected="false"
    >
      Oslo
      <div>
        Kommune
      </div>
    </u-option>
    <u-option
      value="Stavanger"
      tabindex="-1"
      role="option"
      aria-disabled="false"
      aria-selected="false"
    >
      Stavanger
      <div>
        Kommune
      </div>
    </u-option>
    <u-option
      value="Brønnøysund"
      tabindex="-1"
      role="option"
      aria-disabled="false"
      aria-selected="false"
    >
      Brønnøysund
      <div>
        Kommune
      </div>
    </u-option>
    <u-option
      value="Trondheim"
      tabindex="-1"
      role="option"
      aria-disabled="false"
      aria-selected="false"
    >
      Trondheim
      <div>
        Kommune
      </div>
    </u-option>
    <u-option
      value="Bergen"
      tabindex="-1"
      role="option"
      aria-disabled="false"
      aria-selected="false"
    >
      Bergen
      <div>
        Kommune
      </div>
    </u-option>
  </u-datalist>
</u-tags>
`;
